# MPOne

./: .gitignore  .pypirc  README.md  demo.py  pyproject.toml  quick_debug.py  requirements.txt  setup.py  tk.txt  upload_pypi.py
.github/workflows/: publish-to-test-pypi.yml  upload_pypi.py
MPG/: gui.py
MPG/Page/: Help_Information.py  Instrument_info.py  Plot_Chart.py  Settings.py  Tabular_View.py
VISA/: Automatic_Instrument_Detection.py
VISA/Quick_Debug/: CLI.py
VISA/Source_Measure/: __init__.py
example/: Communication_Test.py  Source-measure_programming_example_tek.py  autoDetect_Demo.py
mpone/: __init__.py
mpone.egg-info/: PKG-INFO
mpone/easy/: gui.py
mpone/easy/utils/: responsive_menu_layout.py
mpone/graph/: __init__.py  matplotlib_plot.py
mpone/test/: __init__.py  random_data.py
mpone/utils/: __init__.py  _list_instrument.py  _read_Illuminance_file.py  _read_thermometer_file.py  _show_versions.py  read_thermometer_file.py
mpone/visa/: __init__.py
mpone/visa/manual/: ConfigPulseIMeasureV.py  ConfigPulseVMeasureISweepLin.py  InitiatePulseTest.py  InitiatePulseTestDual.py  Os.py  SweepILinMeasureV.py  SweepVLogMeasureI.py  __init__.py  delay.py  fs.py  gettimezone.py  gpib.py  io.py  opc.py  scriptVar.py  setup.py  smu.py  status.py  trigger.py  waitcomplete.py
mpone/visa/manual/tek_2636B/: ConfigPulseIMeasureV.py  ConfigPulseIMeasureVSweepLin.py  (+67 more)
test/: Automatic_Instrument_Detection.py  Communication_System.py  Live_Data_Plot.py  Live_Data_Plot_TEST.py  __init__.py  main.py  matplot_live_bias.py  matplotlib_live.py  ui.py  untitled.ui
(+12 files in other folders)
