[tool.poetry]
name = "mpone"
version = "0.0.4"
description = "MPOne is a material physical toolbox."
authors = ["Epsilon Luoo <epsilon_luoo@outlook.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/anine09/MPOne"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/anine09/MPOne/issues"


[[tool.poetry.source]]
name = "sjtug"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"

[tool.poetry.dependencies]
python = "^3.8"
pyvisa = "^1.13.0"
flet = "^0.4.0"
plotly = "^5.13.0"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
