[tool.poetry]
name = "mpone"
version = "0.0.4"
description = "MPOne is a material physical toolbox."
authors = ["Epsilon Luoo <epsilon_luoo@outlook.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/anine09/MPOne"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/anine09/MPOne/issues"


[[tool.poetry.source]]
name = "sjtug"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"

[tool.poetry.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
